# talks

./: README.md
.github/workflows/: ci.yml
CppCon2022-Cpp20-Coroutines-for-beginners/: CMakeLists.txt  Readme.md  coroutineChat0.cpp  coroutineInterleaved0.cpp  coroutineTask0.cpp  coroutineTask1.cpp
CppIndia-Con-2023-Cpp-Coroutines-from-scratch/: CMakeLists.txt  Readme.md  coroutineChat0.cpp  coroutineInterleaved0.cpp  coroutineTask0.cpp  suspendAlways0.cpp  suspendNever0.cpp
CppNorth2023-Cpp-Feature-Coroutines-Beginner-Friendly/: CMakeLists.txt  Readme.md  coroutineChat0.cpp  coroutineChatException0.cpp  coroutineInterleaved0.cpp  coroutineParsingDataStreamNonGeneric0.cpp  coroutineTask1.cpp  parsingDataStream0.cpp
ESE2016/: README.md  Readme.md
ESE2016/finally/: finally.cpp
ESE2016/scopeguard/: scopeguard.cpp  scopeguard.h
NYCpp2024-Cpp20-Coroutines-for-Beginners/: CMakeLists.txt  CMakePresets.json  Readme.md  coroutineChat0.cpp  coroutineInterleaved0.cpp  coroutineTask0.cpp  coroutineTask1.cpp  suspendAlways0.cpp  suspendNever0.cpp
